force-app/main/default/objects/ssot__CareProgramProduct__dlm/fields/ssot__CareProgramPriceAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__CareProgramPriceAmount__c</fullName>
    <label>Care Program Price Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CareProgramPriceAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>