force-app/main/default/objects/ssot__CareProgramProduct__dlm/fields/ssot__CareProgramProductStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__CareProgramProductStatus__c</fullName>
    <label>Care Program Product Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CareProgramProductStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>