force-app/main/default/objects/ssot__CareProgramProduct__dlm/fields/ssot__rel_1716666650458_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716666650458_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareProgramProduct_CareProgramId_map_rel</label>
    <referenceTo>ssot__CareProgram__dlm</referenceTo>
    <relationshipLabel>CareProgramProduct_CareProgramId_map_rel</relationshipLabel>
    <relationshipName>rel_1716666650458_end</relationshipName>
    <type>Lookup</type>
</CustomField>