force-app/main/default/objects/ssot__CareProgramProduct__dlm/fields/ssot__rel_1717055371327_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1717055371327_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareProgramProduct_ProductId_map_Pro_rel</label>
    <referenceTo>ssot__Product__dlm</referenceTo>
    <relationshipLabel>CareProgramProduct_ProductId_map_Pro_rel</relationshipLabel>
    <relationshipName>rel_1717055371327_end</relationshipName>
    <type>Lookup</type>
</CustomField>